# CampusEats

./: .gitignore  README.md  __init__.py  api.js  conftest.py  db.json  db_connection_test.py  docker-compose.monitoring.yml  index.html  init_db.sql  menu_scraper.py  pytest.ini  requirements.txt  run_tests.py  run_tests_simple.py  script.js  services.py  setup_database.py  styles.css  test_scenario_1.py  test_scenario_3.py
apps/web/: BACKUP_DESIGN.md
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: AIChatAssistant.tsx  (+13 more)
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  auth.py  dishes.py  favorites.py  menus.py  photos.py  preferences.py  recommendations.py  reports.py  reviews.py  venues.py
backend/app/core/: auth.py  config.py
backend/app/db/: supabase.py
backend/app/services/: __init__.py  dietary_filter.py  llm_service.py  nutrislice_scraper.py
database/: database_manager.py  db_config.json  menu_scraper_database.py  menu_scraper_mysql.py  menu_scraper_simple.py
docs/: FINAL_SUMMARY.md  GITHUB_SETUP.md  README_DATABASE.md  README_TESTING.md  TEST_RESULTS.md
monitoring/loki/: loki-config.yml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail-config.yml
scripts/: create_missing_tables.py  database_config.py
src/app/: models.py
src/tests/: __init__.py  test_scenario_2.py  test_scenario_4.py
supabaseDB/: .gitignore  Dataconfig.py
(+37 files in other folders)
